# BA

./: 200_0.7_5_3_10000_101Result.csv  50_0.7_0.5_0.3_10000_101Result.csv  50_0.7_0.5_0.3_20000_101Result.csv  50_0.7_5_3_10000_101Result.csv  CMakeLists.txt  FEOps.h  Plots.nb  aPosterioriErrrorEstimation.h  chambollePockAlgorithm.h  characteristicToFEMatrixIntegrator.h  csvLoadSafe.h  editImages.h  imageLoadSave.h  main.cpp  massMatrixIntegrator.h  plot1.csv  plot2.csv  plot7.csv  plot8.csv  pockChambolleAlgorithm.h  projectionFE.h  stiffnessMatrixIntegrator.h  unityTriangleIntegratorShellFE.h
Input/: Plots.nb  config.ini  plot1.csv  plot2.csv  plot3.csv  plot4.csv  plot5.csv  plot6.csv  plot7.csv  plot8.csv  unitSquareSubdiv0.vtk  unitSquareSubdiv1.vtk  unitSquareSubdiv2.vtk  unitSquareSubdiv3.vtk  unitSquareSubdiv4.vtk  unitSquareSubdiv5.vtk  unitSquareSubdiv6.vtk  unitSquareSubdiv7.vtk
calibration/: CMakeLists.txt  FEM.h  FEOps.h  FETools.h  Plots.nb  a.txt  chambollePockAlgorithm.h  config.ini  core.h  csvCreator.cpp  csvLoad.h  csvLoadSafe.h  editImages.h  gabor.h  imageLoadSave.h  main.cpp  old.cpp  plot1.csv  plot2.csv  pockAlgorithm.h  pockChambolleAlgorithm.h  testInterface.cpp  uniformSimplexMesh.h
results-2/: Results.eps  dataFunction.csv  dualFE0.vtk  dualFE1.vtk  generalInfo.txt  parameter.ini  primalFE.vtk  thresholdedSolution.csv  uRshifted.csv
results-22/: Results.eps  dataFunction.csv  dualFE0.vtk  dualFE1.vtk  generalInfo.txt  parameter.ini  plotCSV.gp  primalFE.vtk  thresholdedSolution.csv  uRshifted.csv
results-49/: dataFunction.csv  (+77 more)
(+39 files in other folders)
